<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="label_sort_by">Sort by</string>
    <string name="label_select_size">Select size</string>
    <string name="label_select_color">Select color</string>

    <string name="sort_type_popular">Popular</string>
    <string name="sort_type_price_lowest_to_high">Price: lowest to high</string>
    <string name="sort_type_price_highest_to_low">Price: highest to low</string>

    <string name="label_size">Size</string>
    <string name="label_color">Color</string>
    <string name="label_add_to_cart">ADD TO CART</string>
    <string name="pdp_image_dimension_ratio">H,15:11</string>
    <string name="label_error_has_occurred">An error has occurred</string>
    <string name="label_try_again">Try again</string>
    
    <string name="toast_select_all_product_options">Select all product options</string>
</resources>