<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.maxshop.viewModel.ProductDetailsViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{viewModel.errorVisibility}"
            tools:visibility="invisible">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_error"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="2"
                android:text="@string/label_error_has_occurred" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/ButtonRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/normal_100"
                android:layout_marginTop="@dimen/normal_100"
                android:gravity="center"
                android:onClick="@{() -> viewModel.getProduct()}"
                android:text="@string/label_try_again" />


        </LinearLayout>

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motion_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{!viewModel.errorVisibility}"
            app:layoutDescription="@xml/fragment_product_details_scene">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_0"
                android:scaleType="centerCrop"
                android:src="@{viewModel.detailedProduct.imageUrl}"
                app:layout_constraintDimensionRatio="@string/pdp_image_dimension_ratio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@color/colorSale" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/details_root"
                android:layout_width="match_parent"
                android:layout_height="@dimen/normal_0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_view">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/size_button"
                    style="@style/ProductOptionButton"
                    visibleIfNotNull="@{viewModel.detailedProduct.sizesList}"
                    android:layout_marginStart="@dimen/normal_100"
                    android:layout_marginTop="@dimen/normal_75"
                    android:hint="@string/label_size"
                    android:onClick="@{()->viewModel.showSizes()}"
                    android:text="@{viewModel.size}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/color_button"
                    style="@style/ProductOptionButton"
                    visibleIfNotNull="@{viewModel.detailedProduct.colorsList}"
                    android:layout_marginStart="@dimen/normal_100"
                    android:layout_marginTop="@dimen/normal_75"
                    android:hint="@string/label_color"
                    android:onClick="@{()->viewModel.showColors()}"
                    android:text="@{viewModel.color}"
                    app:layout_constraintStart_toEndOf="@id/size_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <ToggleButton
                    android:id="@+id/favorite_button"
                    style="@style/ToggleFavorite"
                    visibleIfNotNull="@{viewModel.detailedProduct}"
                    android:layout_marginTop="@dimen/normal_100"
                    android:layout_marginEnd="@dimen/normal_100"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title_text_view"
                    style="@style/Headline_2"
                    android:layout_width="@dimen/normal_0"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal_100"
                    android:layout_marginTop="@dimen/normal_475"
                    android:layout_marginEnd="@dimen/normal_150"
                    android:maxLines="2"
                    android:text="@{viewModel.detailedProduct.title}"
                    app:layout_constraintEnd_toStartOf="@+id/price_text_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:lines="2"
                    tools:text="T-Shot" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/price_text_view"
                    style="@style/Headline_2"
                    visibleIfNotNull="@{viewModel.detailedProduct}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/normal_100"
                    android:text="@{@string/price(viewModel.detailedProduct.price)}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/title_text_view"
                    tools:text="11.99$" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/category_text_view"
                    style="@style/Regular_12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_25"
                    android:text="@{viewModel.detailedProduct.category}"
                    android:textColor="@color/colorGray"
                    app:layout_constraintStart_toStartOf="@id/title_text_view"
                    app:layout_constraintTop_toBottomOf="@id/title_text_view"
                    tools:text="Electronic" />

                <RatingBar
                    android:id="@+id/rating_bar"
                    style="@style/CustomRatingBar"
                    visibleIfNotNull="@{viewModel.detailedProduct}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/normal_50"
                    android:rating="@{viewModel.detailedProduct.rating}"
                    app:layout_constraintStart_toStartOf="@+id/category_text_view"
                    app:layout_constraintTop_toBottomOf="@+id/category_text_view" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/review_counter"
                    visibleIfNotNull="@{viewModel.detailedProduct}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{@string/review_counter(viewModel.detailedProduct.ratingCount)}"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/sp_normal_75"
                    app:layout_constraintBottom_toBottomOf="@id/rating_bar"
                    app:layout_constraintStart_toEndOf="@id/rating_bar"
                    app:layout_constraintTop_toTopOf="@id/rating_bar"
                    tools:text="(123)" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/Description"
                    android:layout_width="@dimen/normal_0"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/normal_100"
                    android:layout_marginTop="@dimen/normal_100"
                    android:text="@{viewModel.detailedProduct.description}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorBottomNavMenu"
                    android:elevation="@dimen/normal_100"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        style="@style/ButtonRed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="@dimen/normal_100"
                        android:layout_marginTop="@dimen/normal_125"
                        android:layout_marginBottom="@dimen/normal_175"
                        android:onClick="@{()->viewModel.addToBag()}"
                        android:text="@string/label_add_to_cart" />
                </FrameLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.motion.widget.MotionLayout>
    </FrameLayout>
</layout>